Fixed visual error on mobile header

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -68,10 +68,6 @@ body {
 
 /* Start of globals */
 
-.hidden {
-	display: none !important;
-}
-
 #app-container {
 	min-height: 100vh;
 	height: fit-content;
